--- a/src/scripts/advancedcutter/gui/Main.fxml
+++ b/src/scripts/advancedcutter/gui/Main.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="mainPane" prefHeight="364.0" prefWidth="737.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scripts.advancedcutter.MainController">
+<AnchorPane fx:id="mainPane" prefHeight="364.0" prefWidth="737.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scripts.advancedcutter.gui.MainController">
    <children>
       <ImageView fx:id="image" fitHeight="470.0" fitWidth="737.0" layoutY="-61.0" pickOnBounds="true" preserveRatio="true" />
       <Button fx:id="startBtn" layoutX="16.0" layoutY="324.0" mnemonicParsing="false" onAction="#buttonAction" prefHeight="77.0" prefWidth="702.0" text="Start Script">
