labels font changed

--- a/src/scripts/advancedcutter/gui/Main.fxml
+++ b/src/scripts/advancedcutter/gui/Main.fxml
@@ -40,21 +40,36 @@
       </CheckBox>
       <AnchorPane fx:id="customChopPane" layoutX="152.0" layoutY="106.0" prefHeight="156.0" prefWidth="564.0">
          <children>
-            <Label layoutX="291.0" layoutY="14.0" text="Tree spot tile:" />
+            <Label layoutX="291.0" layoutY="14.0" text="Tree spot tile:" textFill="#f0e600">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
             <TextField fx:id="treeSpotWalkTile" disable="true" layoutX="291.0" layoutY="32.0" prefHeight="25.0" prefWidth="133.0" />
             <Button fx:id="setTreeSpotWalkBtn" disable="true" layoutX="431.0" layoutY="32.0" mnemonicParsing="false" onAction="#buttonAction" prefHeight="25.0" prefWidth="122.0" text="Set tile" />
-            <Label layoutX="13.0" layoutY="57.0" text="Tree area first tile:" />
+            <Label layoutX="13.0" layoutY="57.0" text="Tree area first tile:" textFill="#f0e600">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
             <TextField fx:id="treeAreaFirstTile" disable="true" layoutX="13.0" layoutY="74.0" prefHeight="25.0" prefWidth="133.0" />
             <Button fx:id="setFirstTreeAreaBtn" disable="true" layoutX="153.0" layoutY="74.0" mnemonicParsing="false" onAction="#buttonAction" prefHeight="25.0" prefWidth="122.0" text="Set tile" />
-            <Label layoutX="13.0" layoutY="102.0" text="Tree area second tile:" />
+            <Label layoutX="13.0" layoutY="102.0" text="Tree area second tile:" textFill="#f0e600">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
             <TextField fx:id="treeAreaSecondTile" disable="true" layoutX="13.0" layoutY="119.0" prefHeight="25.0" prefWidth="133.0" />
             <Button fx:id="setSecondTreeAreaBtn" disable="true" layoutX="153.0" layoutY="119.0" mnemonicParsing="false" onAction="#buttonAction" prefHeight="25.0" prefWidth="122.0" text="Set tile" />
-            <Label layoutX="291.0" layoutY="57.0" text="Bank area first tile:" />
+            <Label layoutX="291.0" layoutY="57.0" text="Bank area first tile:" textFill="#f0e600">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
             <TextField fx:id="bankAreafirstTile" disable="true" layoutX="291.0" layoutY="74.0" prefHeight="25.0" prefWidth="133.0" />
             <Button fx:id="setFirstBankTileBtn" disable="true" layoutX="431.0" layoutY="74.0" mnemonicParsing="false" onAction="#buttonAction" prefHeight="25.0" prefWidth="122.0" text="Set tile" />
             <TextField fx:id="bankAreaSecondTile" disable="true" layoutX="291.0" layoutY="119.0" prefHeight="25.0" prefWidth="133.0" />
             <Button fx:id="setSecondBankTileBtn" disable="true" layoutX="431.0" layoutY="119.0" mnemonicParsing="false" onAction="#buttonAction" prefHeight="25.0" prefWidth="122.0" text="Set tile" />
-            <Label layoutX="291.0" layoutY="102.0" text="Bank area second tile:" />
+            <Label layoutX="291.0" layoutY="102.0" text="Bank area second tile:" textFill="#f0e600">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
             <Label layoutX="9.0" layoutY="9.0" text="Custom Settings" textFill="#e10a0a">
                <font>
                   <Font name="System Bold" size="35.0" />
